--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h2 style="font-size:30px;"><u>Saaduddin Mahmud</u></h2>
 			
             <ul>
-                <li>Email: <a class="email" href="smahmud@umass.edu" style="color:blue">saadmahmud14@gmail.com</a><br/></li>
+                <li>Email: <a class="email" href="smahmud@umass.edu" style="color:blue">smahmud@umass.edu</a><br/></li>
                 <li>Google Scholar: <a href="https://scholar.google.com/citations?user=fMuMcAgAAAAJ" style="color:blue">Saaduddin Mahmud</a> <br/></li>
                 <li>GitHub: <a href="https://github.com/Saad-Mahmud" style="color:blue">Saad-Mahmud</a> <br/></li>
                 <li>Twitter: <a href="https://twitter.com/saadu_ai" style="color:blue">@saadu_ai</a><br/></li>
