--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 			</ul>
             
             <dd class="clear"></dd>
-            <h3 id="projects">Grad Research Publications:</h3>
+            <h3 id="projects">Grad Publications:</h3>
                 <ol>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				REVEALE: Reward Verification and Learning Using Explanations.(<strong>Under Review 2022</strong>).</li>
