--- a/index.html
+++ b/index.html
@@ -88,12 +88,16 @@
             <dd class="clear"></dd>
             <h3 id="projects">Grad Publications:</h3>
                 <ol>
+			<li><a href="https://scholar.google.com/citations?user=iQo2r6MAAAAJ&hl=en" style="color:blue">Connor Basich*</a>,<strong>Saaduddin Mahmud*</strong>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
+				Learning Constraints on Autonomous Behavior from Proactive Feedback(<strong>Under Review</strong>).</li>
+			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
+				Explanation-Guided Reward Alignment.(<strong>Under Review</strong>).</li>
 			<li><strong>Saaduddin Mahmud*</strong>, <a href="https://scholar.google.com/citations?user=iQo2r6MAAAAJ&hl=en" style="color:blue">Connor Basich*</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Semi-Autonomous Systems with Contextual Competence Awareness(<strong>AAMAS 2023</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
-				REVEALE: A Framework for Reward Verification and Learning.(<strong>SafeAI @ AAAI-23, Under Review 2023</strong>).</li>
+				REVEALE: A Framework for Reward Verification and Learning.(<strong, style="color:red;" >SafeAI @ AAAI-23, Best Paper Award Nomination (Top 4)</strong>).</li>
 			<li><a href="https://samernashed.com/" style="color:blue">Samer B. Nashed</a>, <strong>Saaduddin Mahmud</strong>, Claudia V. Goldman, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
-				Causal Explanations for Sequential Decision Making Under Uncertainty: Foundations and Analysis.(<strong>AAMAS 2023 (Ext. Abs.), Under Review 2023</strong>).
+				Causal Explanations for Sequential Decision Making Under Uncertainty(<strong>AAMAS 2023 (Ext. Abs.) and Under Review for JAIR</strong>).
 			<a href="https://arxiv.org/pdf/2205.15462.pdf" style="color:blue">[ARXIV]</a></li>
 			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, 
 				and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
