--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
 				Learning Constraints on Autonomous Behavior from Proactive Feedback(<strong>Under Review</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Explanation-Guided Reward Alignment.(<strong>IJCAI 2023 (link coming soon)</strong>).</li>
+			<li><strong>Saaduddin Mahmud</strong>, <a href="https://samernashed.com/" style="color:blue">Samer B. Nashed</a>, Claudia V. Goldman, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
+				Estimating Causal Responsibility for Explaining Autonomous Behavior(<strong>EXTRAAMAS-2023 @ AAMAS-2023</strong>).
 			<li><strong>Saaduddin Mahmud*</strong>, <a href="https://scholar.google.com/citations?user=iQo2r6MAAAAJ&hl=en" style="color:blue">Connor Basich*</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Semi-Autonomous Systems with Contextual Competence Awareness(<strong>AAMAS 2023</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
