--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <h3 id= "news">News:</h3>
             
                 <ul>
+			<li><strong style="color:blue">January 2023:</strong> A Full Paper Accepted in IJCAI 2023.</li>
 			<li><strong style="color:blue">January 2023:</strong> A Full Paper and an Abstract Accepted in AAMAS 2023.</li>
 			<li><strong style="color:blue">January 2022:</strong> Abstract Accepted in AAMAS 2022.</li>
 			<li><strong style="color:blue">August 2021:</strong> Started my <strong>MS/PhD</strong> at
