--- a/index.html
+++ b/index.html
@@ -73,14 +73,12 @@
             <h3 id= "news">News:</h3>
             
                 <ul>
+			<li><strong style="color:blue">July 2023:</strong> A Full Paper Accepted in IROS 2023.</li>
 			<li><strong style="color:blue">April 2023:</strong> A Full Paper Accepted in IJCAI 2023.</li>
 			<li><strong style="color:blue">January 2023:</strong> A Full Paper and an Abstract Accepted in AAMAS 2023.</li>
 			<li><strong style="color:blue">January 2022:</strong> Abstract Accepted in AAMAS 2022.</li>
 			<li><strong style="color:blue">August 2021:</strong> Started my <strong>MS/PhD</strong> at
 				<a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. </li>
-			<li><strong style="color:blue">January 2021:</strong> I will be joining as a <strong>Junior Lecturer</strong> at
-				the <a href="http://www.aust.edu/" style="color:blue">Department of Computer Science and Engineering,
-				Ahsanullah University of Science and Technology</a>.</li>
 			</ul>
             
             <dd class="clear"></dd>
