--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
 			<li><a href="https://scholar.google.com/citations?user=iQo2r6MAAAAJ&hl=en" style="color:blue">Connor Basich*</a>,<strong>Saaduddin Mahmud*</strong>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Learning Constraints on Autonomous Behavior from Proactive Feedback (<strong>IROS 2023</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
-				Explanation-Guided Reward Alignment.(<strong>IJCAI 2023</strong>). <a href="https://www.ijcai.org/proceedings/2023/0053.pdf" style="color:blue">[IJCAI]</a></li></li>
+				Explanation-Guided Reward Alignment.(<strong>IJCAI 2023</strong>). <a href="https://www.ijcai.org/proceedings/2023/0053.pdf" style="color:blue">[IJCAI]</a></li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://samernashed.com/" style="color:blue">Samer B. Nashed</a>, Claudia V. Goldman, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
-				Estimating Causal Responsibility for Explaining Autonomous Behavior(<strong>EXTRAAMAS-2023 @ AAMAS-2023</strong>).
+				Estimating Causal Responsibility for Explaining Autonomous Behavior(<strong>EXTRAAMAS-2023 @ AAMAS-2023</strong>).  <a href="https://link.springer.com/chapter/10.1007/978-3-031-40878-6_5" style="color:blue">[SPRINGER]</a> </li>
 			<li><strong>Saaduddin Mahmud*</strong>, <a href="https://scholar.google.com/citations?user=iQo2r6MAAAAJ&hl=en" style="color:blue">Connor Basich*</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Semi-Autonomous Systems with Contextual Competence Awareness(<strong>AAMAS 2023</strong>). <a href="https://dl.acm.org/doi/abs/10.5555/3545946.3598701" style="color:blue">[ACM]</a></li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
@@ -97,7 +97,7 @@
 			<li><a href="https://samernashed.com/" style="color:blue">Samer B. Nashed</a>, <strong>Saaduddin Mahmud</strong>, Claudia V. Goldman, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Causal Explanations for Sequential Decision Making Under Uncertainty(<strong>AAMAS 2023 (Ext. Abs.) and Under Review for JAIR</strong>).
 			<a href="https://arxiv.org/pdf/2205.15462.pdf" style="color:blue">[ARXIV]</a></li>
-                	    
+                	   
 			
 		</ol>
             <dd class="clear"></dd>
