--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 			<li><strong>Saaduddin Mahmud*</strong>, <a href="https://scholar.google.com/citations?user=iQo2r6MAAAAJ&hl=en" style="color:blue">Connor Basich*</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Semi-Autonomous Systems with Contextual Competence Awareness(<strong>AAMAS 2023</strong>). <a href="https://dl.acm.org/doi/abs/10.5555/3545946.3598701" style="color:blue">[ACM]</a></li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
-				REVEALE: A Framework for Reward Verification and Learning.(<strong, style="color:red;" >SafeAI @ AAAI-23, Best Paper Award Nomination (Top 4)</strong>). <a href="https://ceur-ws.org/Vol-3381/6.pdf" style="color:blue">[ARXIV]</a> </li>
+				REVEALE: A Framework for Reward Verification and Learning.(<strong, style="color:red;" >SafeAI @ AAAI-23, Best Paper Award Nomination (Top 4)</strong>). <a href="https://ceur-ws.org/Vol-3381/6.pdf" style="color:blue">[CEUR-WS]</a> </li>
 			<li><a href="https://samernashed.com/" style="color:blue">Samer B. Nashed</a>, <strong>Saaduddin Mahmud</strong>, Claudia V. Goldman, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Causal Explanations for Sequential Decision Making Under Uncertainty(<strong>AAMAS 2023 (Ext. Abs.) and Under Review for JAIR</strong>).
 			<a href="https://arxiv.org/pdf/2205.15462.pdf" style="color:blue">[ARXIV]</a></li>
