--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             <dd class="clear"></dd>
             <h3 id="projects">PhD Research:</h3>
                 <ol>
+			<li> <strong>Saaduddin Mahmud</strong>, <a href="https://mjvc.me/" style="color:blue">Marcell VazquezChanlatte</a>, Stefan Witwicki and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
+				Explaining the Behavior of POMDP-based Agents Through the Impact of Counterfactual Information. (<strong>Under Review</strong>).</li>
 			<li><a href="https://scholar.google.com/citations?user=iQo2r6MAAAAJ&hl=en" style="color:blue">Connor Basich*</a>,<strong>Saaduddin Mahmud*</strong>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Learning Constraints on Autonomous Behavior from Proactive Feedback (<strong>IROS 2023</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
@@ -136,7 +138,7 @@
 					<b>Undergraduate Thesis</b>, Department of Computer Science and Engineering, University Of Dhaka, 2020.</li>
 			<li>Rafid Amir Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, 
 				and <a href="http://mmkhansajeeb.com/index.html" style="color:blue">Md. Mosaddek Khan</a>.
-                        A Simulation Based Online Planning Algorithm for Multi-Agent Cooperative Environments.
+                        A Simulation-Based Online Planning Algorithm for Multi-Agent Cooperative Environments.
 			<a href="https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p1690.pdf" style="color:blue">[AAMAS 2022 (Ext. Abs.)]</a> 
 			<a href="https://arxiv.org/pdf/2110.08480.pdf" style="color:blue">[ARXIV]</a></li> 
 					
@@ -146,11 +148,11 @@
 
                    <h3 id="app">Softwares:</h3>
                    <ol>
-						   <li><strong>AL.GO: </strong>A project written in java to visualize well known algorithms and help students learn them faster.
+						   <li><strong>AL.GO: </strong>A project written in Java to visualize well-known algorithms and help students learn them faster.
                                 <a href="https://www.youtube.com/watch?v=Gh0L1w_lDSg&t=54s" style="color:blue">[Youtube, 2017]</a></li> 
                                 <ul>
-                                    <li>Step by step algorithm visualizer.</li>
-                                    <li>Contains codes, problem links on specific topic to help students learn faster.</li>
+                                    <li> Step-by-step algorithm visualizer.</li>
+                                    <li>Contains codes, and problem links on specific topics to help students learn faster.</li>
                                 </ul>
                                 </li> 
                         <li><strong>MuSyc: </strong>An android application for music synchronization across mobile devices.
@@ -160,7 +162,7 @@
                                 <li>Social-network for sharing music.</li>
                             </ul>
                             </li>   
-                            <li><strong>EasyML: </strong>A web application written in python for automated data visualization and classification.
+                            <li><strong>EasyML: </strong>A web application written in Python for automated data visualization and classification.
 							<a href="https://github.com/Saad-Mahmud/EasyML" style="color:blue">[Github, 2018]</a></li> 
 							<ul>
 								<li>Automated data visualization and classification.</li>
