--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <h3 id= "news">News:</h3>
             
                 <ul>
+			<li><strong style="color:blue">December 2023:</strong> Passed PhD portfolio with distinction and became a PhD candidate.</li>
 			<li><strong style="color:blue">July 2023:</strong> A Full Paper Accepted in IROS 2023.</li>
 			<li><strong style="color:blue">April 2023:</strong> A Full Paper Accepted in IJCAI 2023.</li>
 			<li><strong style="color:blue">January 2023:</strong> A Full Paper and an Abstract Accepted in AAMAS 2023.</li>
