--- a/index.html
+++ b/index.html
@@ -76,20 +76,18 @@
             <h3 id= "news">News:</h3>
             
                 <ul>
+			<li><strong style="color:blue">December 2023:</strong> A full paper accepted in AAMAS 2023.</li>
 			<li><strong style="color:blue">December 2023:</strong> Passed PhD portfolio with distinction and became a PhD candidate.</li>
-			<li><strong style="color:blue">July 2023:</strong> A Full Paper Accepted in IROS 2023.</li>
-			<li><strong style="color:blue">April 2023:</strong> A Full Paper Accepted in IJCAI 2023.</li>
-			<li><strong style="color:blue">January 2023:</strong> A Full Paper and an Abstract Accepted in AAMAS 2023.</li>
-			<li><strong style="color:blue">January 2022:</strong> Abstract Accepted in AAMAS 2022.</li>
-			<li><strong style="color:blue">August 2021:</strong> Started my <strong>MS/PhD</strong> at
-				<a href="cics.umass.edu" style="color:blue">UMass Amherst</a>. </li>
+			<li><strong style="color:blue">July 2023:</strong> A full paper accepted in IROS 2023.</li>
+			<li><strong style="color:blue">April 2023:</strong> A full paper accepted in IJCAI 2023.</li>
+			<li><strong style="color:blue">January 2023:</strong> A full paper and an abstract accepted in AAMAS 2023.</li>
 			</ul>
             
             <dd class="clear"></dd>
             <h3 id="projects">PhD Research:</h3>
                 <ol>
 			<li> <strong>Saaduddin Mahmud</strong>, <a href="https://mjvc.me/" style="color:blue">Marcell VazquezChanlatte</a>, Stefan Witwicki and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
-				Explaining the Behavior of POMDP-based Agents Through the Impact of Counterfactual Information. (<strong>Under Review</strong>).</li>
+				Explaining the Behavior of POMDP-based Agents Through the Impact of Counterfactual Information. (<strong>AAMAS 2024</strong>).</li>
 			<li><a href="https://scholar.google.com/citations?user=iQo2r6MAAAAJ&hl=en" style="color:blue">Connor Basich*</a>,<strong>Saaduddin Mahmud*</strong>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
 				Learning Constraints on Autonomous Behavior from Proactive Feedback (<strong>IROS 2023</strong>).</li>
 			<li><strong>Saaduddin Mahmud</strong>, <a href="https://www.sandhyasai.com/" style="color:blue">Sandhya Saisubramanian</a>, and <a href="https://groups.cs.umass.edu/shlomo/" style="color:blue">Shlomo Zilberstein</a>. 
