--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </a>
             <a href="SaadCV.pdf" target="_blank" rel="noopener" class="pill">CV</a>
           </div>
+          <div class="meta">Last updated: Nov 2025</div>
         </div>
       </aside>
 
@@ -64,6 +65,20 @@
             <li><span class="when">Dec 2023</span> Full paper accepted at AAMAS 2024.</li>
             <li><span class="when">Dec 2023</span> Passed PhD portfolio with distinction (advanced to candidacy).</li>
           </ul>
+        </section>
+
+        <section class="card patents" id="patents">
+          <h2>Patents</h2>
+          <ol class="pub-list">
+            <li>
+              <em>Dynamic Refinement of Custom Classes Using Zero-Shot Images.</em>
+              Under review.
+            </li>
+            <li>
+              <em>Vehicle Decision Making Using Sequential Information Probing.</em>
+              US Patent App. 18/429,196.
+            </li>
+          </ol>
         </section>
 
         <section class="card pubs" id="publications">
@@ -167,26 +182,7 @@
           </ol>
         </section>
 
-        <section class="card patents" id="patents">
-          <h2>Patents</h2>
-          <ol class="pub-list">
-            <li>
-              <em>Dynamic Refinement of Custom Classes Using Zero-Shot Images.</em>
-              Under review.
-            </li>
-            <li>
-              <em>Vehicle Decision Making Using Sequential Information Probing.</em>
-              US Patent App. 18/429,196.
-            </li>
-          </ol>
-        </section>
-
-        <footer class="card foot">
-          <div class="foot-inner">
-            <span>CV: <a href="SaadCV.pdf" target="_blank" rel="noopener">PDF</a></span>
-            <span>Last updated: Nov 2025</span>
-          </div>
-        </footer>
+        
       </section>
     </main>
 
