--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <h2>About</h2>
           <p>
             I am a PhD candidate in Computer Science at <a href="https://www.cics.umass.edu/" target="_blank" rel="noopener">UMass Amherst</a>, advised by <a href="https://groups.cs.umass.edu/shlomo/" target="_blank" rel="noopener">Shlomo Zilberstein</a>.
-            I study alignment of agentic systems and multi-agent coordination. My recent work uses large language models to infer intent from unstructured instructions and generate explainable plans, with applications in planning, RL, and human–AI collaboration.
+            I study the alignment of agentic systems. My recent work uses large language models to infer intent from unstructured instructions in single‑ and multi‑agent settings.
           </p>
         </section>
 
