--- a/index.html
+++ b/index.html
@@ -29,10 +29,16 @@
               <svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor" aria-hidden="true"><path d="M2 6.5A2.5 2.5 0 0 1 4.5 4h15A2.5 2.5 0 0 1 22 6.5v11A2.5 2.5 0 0 1 19.5 20h-15A2.5 2.5 0 0 1 2 17.5v-11Zm2.4-.3 7.6 5.08 7.6-5.08a1 1 0 0 0-.7-.2H5.1a1 1 0 0 0-.7.2Zm17.2 1.86-8.3 5.54a1 1 0 0 1-1.1 0L3.9 8.06V17.5c0 .28.22.5.5.5h15c.28 0 .5-.22.5-.5V8.06Z"/></svg>
             </a>
             <a href="https://scholar.google.com/citations?user=fMuMcAgAAAAJ" target="_blank" rel="noopener" title="Google Scholar" aria-label="Google Scholar">
-              <svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor" aria-hidden="true"><path d="M10.2 12.6 3 7l7.2-5.6v11.2zM11.3 3.1 21 10.4l-9.7 7.4V3.1zM3 17.2h8.3v3.7H3v-3.7z"/></svg>
+              <svg viewBox="0 0 24 24" width="26" height="26" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M3 9l9-5 9 5-9 5-9-5z"/>
+                <path d="M7 12v5a9 9 0 0010 0v-5"/>
+                <path d="M12 14v7"/>
+              </svg>
             </a>
             <a href="https://github.com/Saad-Mahmud" target="_blank" rel="noopener" title="GitHub" aria-label="GitHub">
-              <svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor" aria-hidden="true"><path d="M12 .5C5.7.5.8 5.4.8 11.7c0 4.9 3.2 9 7.6 10.4.6.1.8-.3.8-.6v-2c-3.1.7-3.8-1.3-3.8-1.3-.5-1.1-1.2-1.4-1.2-1.4-1-.7.1-.7.1-.7 1.1.1 1.7 1.2 1.7 1.2 1 .1.9-.6 1.8-.9-.4-.3-.8-1-.8-1.9 0-1 .3-1.7.9-2.1-.1-.2-.4-1.1.1-2.3 0 0 .8-.3 2.4.9.7-.2 1.4-.3 2.2-.3s1.5.1 2.2.3c1.6-1.2 2.4-.9 2.4-.9.5 1.2.3 2.1.1 2.3.6.4.9 1.1.9 2.1 0 .9-.3 1.6-.8 1.9.9.3 1.6 1 1.6 2.1v3.1c0 .3.2.7.8.6 4.4-1.5 7.6-5.6 7.6-10.4C23.2 5.4 18.3.5 12 .5Z"/></svg>
+              <svg viewBox="0 0 24 24" width="26" height="26" fill="currentColor" aria-hidden="true">
+                <path d="M12 .5C5.73.5.5 5.73.5 12c0 5.08 3.29 9.38 7.86 10.9.58.11.79-.25.79-.56 0-.28-.01-1.03-.02-2.02-3.2.7-3.88-1.54-3.88-1.54-.53-1.34-1.29-1.7-1.29-1.7-1.06-.72.08-.71.08-.71 1.17.08 1.78 1.2 1.78 1.2 1.04 1.79 2.72 1.27 3.39.97.11-.76.41-1.27.74-1.56-2.55-.29-5.24-1.28-5.24-5.68 0-1.26.45-2.28 1.2-3.09-.12-.3-.52-1.53.11-3.18 0 0 .98-.31 3.2 1.18.93-.26 1.93-.39 2.92-.39.99 0 1.99.13 2.92.39 2.22-1.49 3.2-1.18 3.2-1.18.63 1.65.23 2.88.11 3.18.75.81 1.2 1.83 1.2 3.09 0 4.41-2.69 5.38-5.25 5.66.42.36.8 1.07.8 2.17 0 1.56-.01 2.81-.01 3.19 0 .31.21.68.8.56C20.21 21.37 23.5 17.08 23.5 12c0-6.27-5.23-11.5-11.5-11.5z"/>
+              </svg>
             </a>
             <a href="https://twitter.com/saadu_ai" target="_blank" rel="noopener" title="X (Twitter)" aria-label="Twitter">
               <svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor" aria-hidden="true"><path d="M18.2 2H21l-6.3 7.2L22 22h-6.9l-4.6-6-5.3 6H2l6.8-7.7L2 2h7l4.2 5.5L18.2 2Zm-2.4 18h2.1L8.3 4H6.1l9.7 16Z"/></svg>
@@ -54,7 +60,7 @@
           <h2>About</h2>
           <p>
             I am a PhD candidate in Computer Science at <a href="https://www.cics.umass.edu/" target="_blank" rel="noopener">UMass Amherst</a>, advised by <a href="https://groups.cs.umass.edu/shlomo/" target="_blank" rel="noopener">Shlomo Zilberstein</a>.
-            I study the alignment of agentic systems. My recent work uses large language models to infer intent from unstructured instructions in single‑ and multi‑agent settings.
+            I study the alignment of agentic systems. My recent work uses large language models to infer intent from unstructured instructions in both single and multiagent systems.
           </p>
         </section>
 
