--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <li>
               Samer B. Nashed, <strong>Saaduddin Mahmud</strong>, Claudia V. Goldman, and Shlomo Zilberstein.
               <em>Causal Explanations for Sequential Decision Making Under Uncertainty: Foundations and Analysis.</em>
-              Journal of Artificial Intelligence Research, 2025.
+              Journal of Artificial Intelligence Research, 2025. <a href="https://arxiv.org/pdf/2205.15462.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
 
@@ -104,22 +104,22 @@
             <li>
               <strong>Saaduddin Mahmud</strong>, Mason Nakamura, Kyle Hollins Wray, and Shlomo Zilberstein.
               <em>Inference-Aware Prompt Optimization for Aligning Black-Box Large Language Models.</em>
-              AAAI 2026.
+              AAAI 2026. <a href="https://arxiv.org/pdf/2508.10030.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Mason Nakamura, and Shlomo Zilberstein.
               <em>MAPLE: A Framework for Active Preference Learning Guided by Large Language Models.</em>
-              AAAI 2025.
+              AAAI 2025. <a href="https://arxiv.org/pdf/2412.07207.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Marcell VazquezChanlatte, Stefan Witwicki, and Shlomo Zilberstein.
               <em>Explaining the Behavior of POMDP-based Agents Through the Impact of Counterfactual Information.</em>
-              AAMAS 2024.
+              AAMAS 2024. <a href="https://www.ifaamas.org/Proceedings/aamas2024/pdfs/p1346.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               Connor Basich*, <strong>Saaduddin Mahmud*</strong>, and Shlomo Zilberstein.
               <em>Learning Constraints on Autonomous Behavior from Proactive Feedback.</em>
-              IROS 2023.
+              IROS 2023. <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10341801" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein.
@@ -130,22 +130,22 @@
             <li>
               <strong>Saaduddin Mahmud</strong>, Connor Basich, and Shlomo Zilberstein.
               <em>Semi-Autonomous Systems with Contextual Competence Awareness.</em>
-              AAMAS 2023. <a href="https://dl.acm.org/doi/abs/10.5555/3545946.3598701" target="_blank" rel="noopener">[ACM]</a>
+              AAMAS 2023. <a href="https://www.ifaamas.org/Proceedings/aamas2023/pdfs/p689.pdf" target="_blank" rel="noopener">[PDF]</a> <a href="https://dl.acm.org/doi/abs/10.5555/3545946.3598701" target="_blank" rel="noopener">[ACM]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Md. Mosaddek Khan, Moumita Choudhury, Long Tran-Thanh, and Nicholas R. Jennings.
               <em>Learning Optimal Temperature Region for Solving Mixed Integer Functional DCOPs.</em>
-              IJCAI 2021.
+              IJCAI 2021. <a href="https://arxiv.org/pdf/2002.12001.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Moumita Choudhury, Md. Mosaddek Khan, Long Tran-Thanh, and Nicholas R. Jennings.
               <em>AED: An Anytime Evolutionary DCOP Algorithm.</em>
-              AAMAS 2020.
+              AAMAS 2020. <a href="https://arxiv.org/pdf/1909.06254.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               Moumita Choudhury, <strong>Saaduddin Mahmud</strong>, and Md. Mosaddek Khan.
               <em>A Particle Swarm Based Algorithm for Functional Distributed Constraint Optimization Problems.</em>
-              AAAI 2020.
+              AAAI 2020. <a href="https://arxiv.org/pdf/1909.06168.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
 
@@ -159,7 +159,7 @@
             <li>
               <strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein.
               <em>Verification and Validation of AI Systems Using Explanations.</em>
-              AAAI Fall Symposium, 2024.
+              AAAI Fall Symposium, 2024. <a href="https://ojs.aaai.org/index.php/AAAI-SS/article/download/31774/33941" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein.
@@ -169,7 +169,7 @@
             <li>
               <strong>Saaduddin Mahmud</strong>, Samer B. Nashed, Claudia V. Goldman, and Shlomo Zilberstein.
               <em>Estimating Causal Responsibility for Explaining Autonomous Behavior.</em>
-              EXTRAAMAS 2023 @ AAMAS 2023. <a href="https://link.springer.com/chapter/10.1007/978-3-031-40878-6_5" target="_blank" rel="noopener">[Springer]</a>
+              EXTRAAMAS 2023 @ AAMAS 2023. <a href="https://link.springer.com/chapter/10.1007/978-3-031-40878-6_5" target="_blank" rel="noopener">[Springer]</a> <a href="https://link.springer.com/content/pdf/10.1007/978-3-031-40878-6_5.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
 
@@ -178,12 +178,12 @@
             <li>
               Mason Nakamura, Abhinav Kumar, <strong>Saaduddin Mahmud</strong>, Sahar Abdelnabi, Shlomo Zilberstein, and Eugene Bagdasarian.
               <em>Terrarium: Revisiting the Blackboard for Studying Multi-agent Attacks.</em>
-              Under review (ICLR 2026).
+              Under review (ICLR 2026). <a href="https://arxiv.org/pdf/2510.14312.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Dorian Benhamou-Goldfajn, and Shlomo Zilberstein.
               <em>Distributed Multi-agent Coordination Using Multimodal Foundation Models.</em>
-              arXiv:2501.14189, 2025. <a href="https://arxiv.org/abs/2501.14189" target="_blank" rel="noopener">[arXiv]</a>
+              arXiv:2501.14189, 2025. <a href="https://arxiv.org/abs/2501.14189" target="_blank" rel="noopener">[arXiv]</a> <a href="https://arxiv.org/pdf/2501.14189.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
         </section>
