--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
         <span class="name">Saaduddin Mahmud</span>
         <span class="role">PhD Candidate · UMass Amherst</span>
       </div>
-      <button id="theme-toggle" class="theme-toggle" aria-label="Toggle color theme">🌓</button>
     </header>
 
     <main class="container">
@@ -95,7 +94,7 @@
             <li>
               Samer B. Nashed, <strong>Saaduddin Mahmud</strong>, Claudia V. Goldman, and Shlomo Zilberstein.
               <em>Causal Explanations for Sequential Decision Making Under Uncertainty: Foundations and Analysis.</em>
-              Journal of Artificial Intelligence Research, 2025. <a href="https://arxiv.org/pdf/2205.15462.pdf" target="_blank" rel="noopener">[PDF]</a>
+              Journal of Artificial Intelligence Research, 2025. <a href="https://www.jair.org/index.php/jair/article/view/18126" target="_blank" rel="noopener">[JAIR]</a> <a href="https://arxiv.org/pdf/2205.15462.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
 
@@ -154,7 +153,7 @@
             <li>
               <strong>Saaduddin Mahmud</strong>, Eugene Bagdasarian, and Shlomo Zilberstein.
               <em>CoLLAB: A Framework for Designing Scalable Benchmarks for Agentic LLMs.</em>
-              Scaling Environments for Agents Workshop at NeurIPS, 2025.
+              Scaling Environments for Agents Workshop at NeurIPS, 2025. <a href="https://openreview.net/forum?id=372FjQy1cF" target="_blank" rel="noopener">[OpenReview]</a> <a href="https://github.com/Saad-Mahmud/CoLLAB_SEA" target="_blank" rel="noopener">[GitHub]</a> <a href="https://agents-collab.github.io/" target="_blank" rel="noopener">[Project]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein.
@@ -178,7 +177,7 @@
             <li>
               Mason Nakamura, Abhinav Kumar, <strong>Saaduddin Mahmud</strong>, Sahar Abdelnabi, Shlomo Zilberstein, and Eugene Bagdasarian.
               <em>Terrarium: Revisiting the Blackboard for Studying Multi-agent Attacks.</em>
-              Under review (ICLR 2026). <a href="https://arxiv.org/pdf/2510.14312.pdf" target="_blank" rel="noopener">[PDF]</a>
+              Under review (ICLR 2026). <a href="https://arxiv.org/pdf/2510.14312.pdf" target="_blank" rel="noopener">[PDF]</a> <a href="https://github.com/umass-aisec/Terrarium" target="_blank" rel="noopener">[GitHub]</a> <a href="https://aisec.cs.umass.edu/projects/terrarium/" target="_blank" rel="noopener">[Project]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Dorian Benhamou-Goldfajn, and Shlomo Zilberstein.
@@ -192,16 +191,6 @@
       </section>
     </main>
 
-    <script>
-      (function () {
-        const key = 'theme-preference';
-        const root = document.documentElement;
-        const btn = document.getElementById('theme-toggle');
-        function setTheme(t){ root.setAttribute('data-theme', t); localStorage.setItem(key, t); }
-        function getTheme(){ return localStorage.getItem(key) || (window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light'); }
-        setTheme(getTheme());
-        btn?.addEventListener('click', ()=> setTheme(root.getAttribute('data-theme')==='dark' ? 'light' : 'dark'));
-      })();
-    </script>
+    
   </body>
  </html>
