--- a/index.html
+++ b/index.html
@@ -51,17 +51,15 @@
             <a href="SaadCV.pdf" target="_blank" rel="noopener" class="pill">CV</a>
           </div>
           <div class="meta">Last updated: Nov 2025</div>
-          <div class="cta-demos" role="group" aria-label="Live demos">
-            <a href="https://agents-collab.github.io/" target="_blank" rel="noopener" class="demo-cta collab" title="CoLLAB demo">
-              <span class="ico" aria-hidden="true">🚀</span>
-              <span class="label">CoLLAB Demo</span>
-            </a>
-            <a href="https://aisec.cs.umass.edu/projects/terrarium/" target="_blank" rel="noopener" class="demo-cta terrarium" title="Terrarium demo">
-              <span class="ico" aria-hidden="true">🔥</span>
-              <span class="label">Terrarium Demo</span>
-            </a>
-          </div>
         </div>
+        <a href="https://agents-collab.github.io/" target="_blank" rel="noopener" class="demo-tab collab" title="CoLLAB demo" aria-label="CoLLAB Demo">
+          <span class="ico" aria-hidden="true">🚀</span>
+          <span class="label">CoLLAB Demo</span>
+        </a>
+        <a href="https://aisec.cs.umass.edu/projects/terrarium/" target="_blank" rel="noopener" class="demo-tab terrarium" title="Terrarium demo" aria-label="Terrarium Demo">
+          <span class="ico" aria-hidden="true">🔥</span>
+          <span class="label">Terrarium Demo</span>
+        </a>
       </aside>
 
       <section class="content">
