--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <main class="container">
       <aside class="sidebar" aria-label="Profile">
+        <div class="profile-stack">
         <div class="card profile">
           <div class="avatar-wrap">
             <img class="avatar" src="pic2.jpg" alt="Portrait of Saaduddin Mahmud" />
@@ -60,6 +61,7 @@
           <span class="ico" aria-hidden="true">🔥</span>
           <span class="label">Terrarium Demo</span>
         </a>
+        </div>
       </aside>
 
       <section class="content">
@@ -74,9 +76,9 @@
         <section class="card news" id="news">
           <h2>News</h2>
           <ul class="list">
+            <li><span class="when">Nov 2025</span> Full paper accepted at AAAI 2026.</li>
             <li><span class="when">Dec 2024</span> Full paper accepted at AAAI 2025.</li>
-            <li><span class="when">Dec 2023</span> Full paper accepted at AAMAS 2024.</li>
-            <li><span class="when">Dec 2023</span> Passed PhD portfolio with distinction (advanced to candidacy).</li>
+            <li><span class="when">Dec 2023</span> Passed PhD portfolio with distinction.</li>
           </ul>
         </section>
 
