--- a/index.html
+++ b/index.html
@@ -163,12 +163,12 @@
             <li>
               <strong>Saaduddin Mahmud</strong>, Eugene Bagdasarian, and Shlomo Zilberstein.
               <em>CoLLAB: A Framework for Designing Scalable Benchmarks for Agentic LLMs.</em>
-              Scaling Environments for Agents Workshop at NeurIPS, 2025. <a href="https://openreview.net/forum?id=372FjQy1cF" target="_blank" rel="noopener">[OpenReview]</a> <a href="https://github.com/Saad-Mahmud/CoLLAB_SEA" target="_blank" rel="noopener">[GitHub]</a> <a href="https://agents-collab.github.io/" target="_blank" rel="noopener">[Project]</a>
+              Scaling Environments for Agents Workshop at NeurIPS 2025. <a href="https://openreview.net/forum?id=372FjQy1cF" target="_blank" rel="noopener">[OpenReview]</a> <a href="https://github.com/Saad-Mahmud/CoLLAB_SEA" target="_blank" rel="noopener">[GitHub]</a> <a href="https://agents-collab.github.io/" target="_blank" rel="noopener">[Project]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein.
               <em>Verification and Validation of AI Systems Using Explanations.</em>
-              AAAI Fall Symposium, 2024. <a href="https://ojs.aaai.org/index.php/AAAI-SS/article/download/31774/33941" target="_blank" rel="noopener">[PDF]</a>
+              AAAI Fall Symposium 2024. <a href="https://ojs.aaai.org/index.php/AAAI-SS/article/download/31774/33941" target="_blank" rel="noopener">[PDF]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Sandhya Saisubramanian, and Shlomo Zilberstein.
@@ -178,7 +178,7 @@
             <li>
               <strong>Saaduddin Mahmud</strong>, Samer B. Nashed, Claudia V. Goldman, and Shlomo Zilberstein.
               <em>Estimating Causal Responsibility for Explaining Autonomous Behavior.</em>
-              EXTRAAMAS 2023 @ AAMAS 2023. <a href="https://link.springer.com/chapter/10.1007/978-3-031-40878-6_5" target="_blank" rel="noopener">[Springer]</a> <a href="https://link.springer.com/content/pdf/10.1007/978-3-031-40878-6_5.pdf" target="_blank" rel="noopener">[PDF]</a>
+              EXTRAAMAS at AAMAS 2023. <a href="https://link.springer.com/chapter/10.1007/978-3-031-40878-6_5" target="_blank" rel="noopener">[Springer]</a> <a href="https://link.springer.com/content/pdf/10.1007/978-3-031-40878-6_5.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
 
@@ -187,12 +187,12 @@
             <li>
               Mason Nakamura, Abhinav Kumar, <strong>Saaduddin Mahmud</strong>, Sahar Abdelnabi, Shlomo Zilberstein, and Eugene Bagdasarian.
               <em>Terrarium: Revisiting the Blackboard for Studying Multi-agent Attacks.</em>
-              Under review (ICLR 2026). <a href="https://arxiv.org/pdf/2510.14312.pdf" target="_blank" rel="noopener">[PDF]</a> <a href="https://github.com/umass-aisec/Terrarium" target="_blank" rel="noopener">[GitHub]</a> <a href="https://aisec.cs.umass.edu/projects/terrarium/" target="_blank" rel="noopener">[Project]</a>
+              Under review, ICLR 2026. <a href="https://arxiv.org/pdf/2510.14312.pdf" target="_blank" rel="noopener">[PDF]</a> <a href="https://github.com/umass-aisec/Terrarium" target="_blank" rel="noopener">[GitHub]</a> <a href="https://aisec.cs.umass.edu/projects/terrarium/" target="_blank" rel="noopener">[Project]</a>
             </li>
             <li>
               <strong>Saaduddin Mahmud</strong>, Dorian Benhamou-Goldfajn, and Shlomo Zilberstein.
               <em>Distributed Multi-agent Coordination Using Multimodal Foundation Models.</em>
-              arXiv:2501.14189, 2025. <a href="https://arxiv.org/abs/2501.14189" target="_blank" rel="noopener">[arXiv]</a> <a href="https://arxiv.org/pdf/2501.14189.pdf" target="_blank" rel="noopener">[PDF]</a>
+              arXiv 2025. <a href="https://arxiv.org/abs/2501.14189" target="_blank" rel="noopener">[arXiv]</a> <a href="https://arxiv.org/pdf/2501.14189.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
         </section>
