--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <li>
               Samer B. Nashed, <strong>Saaduddin Mahmud</strong>, Claudia V. Goldman, and Shlomo Zilberstein.
               <em>Causal Explanations for Sequential Decision Making Under Uncertainty: Foundations and Analysis.</em>
-              Journal of Artificial Intelligence Research, 2025. <a href="https://www.jair.org/index.php/jair/article/view/18126" target="_blank" rel="noopener">[JAIR]</a> <a href="https://arxiv.org/pdf/2205.15462.pdf" target="_blank" rel="noopener">[PDF]</a>
+              Journal of Artificial Intelligence Research, 2025. Also accepted to AAAI 2026 (Journal Track). <a href="https://www.jair.org/index.php/jair/article/view/18126" target="_blank" rel="noopener">[JAIR]</a> <a href="https://arxiv.org/pdf/2205.15462.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
 
