--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </li>
           </ol>
 
-          <h3>Workshops</h3>
+          <h3>Workshops, Abstracts & Posters</h3>
           <ol class="pub-list">
             <li>
               <strong>Saaduddin Mahmud</strong>, Eugene Bagdasarian, and Shlomo Zilberstein.
@@ -179,6 +179,11 @@
               <strong>Saaduddin Mahmud</strong>, Samer B. Nashed, Claudia V. Goldman, and Shlomo Zilberstein.
               <em>Estimating Causal Responsibility for Explaining Autonomous Behavior.</em>
               EXTRAAMAS at AAMAS 2023. <a href="https://link.springer.com/chapter/10.1007/978-3-031-40878-6_5" target="_blank" rel="noopener">[Springer]</a> <a href="https://link.springer.com/content/pdf/10.1007/978-3-031-40878-6_5.pdf" target="_blank" rel="noopener">[PDF]</a>
+            </li>
+            <li>
+              Rafid Ameer Mahmud, Fahim Faisal, <strong>Saaduddin Mahmud</strong>, and Md. Mosaddek Khan.
+              <em>A Simulation Based Online Planning Algorithm for Multi-Agent Cooperative Environments.</em>
+              AAMAS 2022 (Extended Abstract). <a href="https://aamas.csc.liv.ac.uk/Proceedings/aamas2022/pdfs/p1690.pdf" target="_blank" rel="noopener">[PDF]</a>
             </li>
           </ol>
 
